--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
     "script",
     "inner"
   ],
+  "main": "lib/DangerousHTML.js",
   "repository": "itrelease/react-dangerous-html",
   "peerDependencies": {
+    "prop-types": "*",
     "react": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
